--- a/modules/artifacts/client/views/artifact-display.html
+++ b/modules/artifacts/client/views/artifact-display.html
@@ -23,14 +23,24 @@
 			<h2 class="pull-left">Valued Component Description</h2>
 			<div class="pull-right"></div>
 		</div>
-		<div class="panel-body">
-			<div class="file-horiz">
-				<!-- These need to be built out as an array of VC's attached to this artifact -->
-				<div class="panel panel-info" ng-repeat="o in artifact.valuedComponentsAvailable" ui-sref="p.artifact.view({artifactId:o.artifactID})" class="clickable">
-					<div>{{ o.name }}</div>
-				</div>
-			</div>
-		</div>
+		<div class="panel panel-default">
+			<!-- These need to be built out as an array of VC's attached to this artifact -->
+			<table ng-table="tableParams" show-filter="false" class="table table-hover table-striped">
+				<tr ng-repeat="o in artifact.valuedComponentsAvailable" ui-sref="p.artifact.view({artifactId:o.artifactInst._id})">
+					<td data-title="'Name'"    filter="{'name':'text'}"     sortable="'name'"    >{{o.name}}</td>
+					<td data-title="'Version'" filter="{'version':'text'}"   	class="text-center" sortable="'version'"  >{{o.artifactInst.version}}</td>
+					<td data-title="'Stage'"   filter="{'stage':'text'}"    	class="text-center" sortable="'stage'"   >{{o.artifactInst.stage}}</td>
+					<td data-title="'Published'" sortable="'isPublished'"><i ng-if="o.artifactInst.isPublished" class="glyphicon glyphicon-ok"></i></td>
+					<td class="actions-col action-x1" header-class="'actions-col action-x1'">
+						<a class="btn btn-link btn-sm"
+						   title="Edit Valued Component"
+						   ng-click="$event.stopPropagation()"
+						   ui-sref="p.artifact.view({artifactId:o.artifactInst._id})">
+							<span class="glyphicon glyphicon-pencil"></span>
+						</a>
+					</td>
+				</tr>
+			</table>
 	</div>
 </div>
 
