--- a/modules/artifacts/client/views/artifact-display.html
+++ b/modules/artifacts/client/views/artifact-display.html
@@ -26,16 +26,16 @@
 		<div class="panel panel-default">
 			<!-- These need to be built out as an array of VC's attached to this artifact -->
 			<table ng-table="tableParams" show-filter="false" class="table table-hover table-striped">
-				<tr ng-repeat="o in artifact.valuedComponentsAvailable" ui-sref="p.artifact.view({artifactId:o.artifactInst._id})">
+				<tr ng-repeat="o in artifact.valuedComponents" ui-sref="p.artifact.view({artifactId:o.artifact})">
 					<td data-title="'Name'"    filter="{'name':'text'}"     sortable="'name'"    >{{o.name}}</td>
-					<td data-title="'Version'" filter="{'version':'text'}"   	class="text-center" sortable="'version'"  >{{o.artifactInst.version}}</td>
-					<td data-title="'Stage'"   filter="{'stage':'text'}"    	class="text-center" sortable="'stage'"   >{{o.artifactInst.stage}}</td>
-					<td data-title="'Published'" sortable="'isPublished'"><i ng-if="o.artifactInst.isPublished" class="glyphicon glyphicon-ok"></i></td>
+					<td data-title="'Version'" filter="{'version':'text'}"   	class="text-center" sortable="'version'"  >{{o.version}}</td>
+					<td data-title="'Stage'"   filter="{'stage':'text'}"    	class="text-center" sortable="'stage'"   >{{o.stage}}</td>
+					<td data-title="'Published'" sortable="'isPublished'"><i ng-if="o.isPublished" class="glyphicon glyphicon-ok"></i></td>
 					<td class="actions-col action-x1" header-class="'actions-col action-x1'">
 						<a class="btn btn-link btn-sm"
 						   title="Edit Valued Component"
 						   ng-click="$event.stopPropagation()"
-						   ui-sref="p.artifact.view({artifactId:o.artifactInst._id})">
+						   ui-sref="p.artifact.edit({artifactId:o.artifact})">
 							<span class="glyphicon glyphicon-pencil"></span>
 						</a>
 					</td>
