--- a/modules/users/client/views/user-partials/user-activities.html
+++ b/modules/users/client/views/user-partials/user-activities.html
@@ -44,7 +44,7 @@
                                 <td ng-if="environment === 'EAO'" data-title="'Status'" sortable="'status'">
                                     {{o.status}}
                                 </td>
-                                <td>
+                                <td header-class="'actions-col'">
                                     <a ui-sref="p.detail({projectid: o.code})">View Details</a>
                                 </td>
                             </tr>
