--- a/modules/projects/client/views/projects.abstract.html
+++ b/modules/projects/client/views/projects.abstract.html
@@ -42,6 +42,9 @@
 								<div class="panel-body">
 									<tmpl-recent-activity id="anchor-recent" x-form="form"></tmpl-recent-activity>
 								</div>
+								<div class="panel-footer">
+									<a class="show-all-news-link btn btn-link" href="/news">View all News & Announcements</a>
+								</div>
 							</div>
 						</div>
 						<div class="col-xs-12 col-sm-6 col-md-8">
